# TokenMaxxing

./: ARCHITECTURE.md  ARCHITECTURE_V2.md  AUDIT.md  BENCHMARK_RESULTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DISCOVERY_CHECKLIST.md  FINAL_REPORT.md  GITHUB_SECURITY_AUDIT.md  LICENSE  METADATA_UPDATE_REPORT.md  PUBLIC_DISCOVERY_REPORT.md  PUBLIC_RELEASE_REPORT.md  PUSH_REPORT.md  README.md  README_BADGE_REPORT.md  README_UPDATE_REPORT.md  REAL_WORLD_VALIDATION.md  RELEASE_NOTES_v0.5.0.md  ROADMAP.md  SECURITY_REMEDIATION_REPORT.md  SOCIAL_ANNOUNCEMENT.md  STABILIZATION.md  V2_IMPLEMENTATION.md  VALIDATION_REPORT.md  duplicate1.md  test_large.md  test_synthetic.md
bindings/python/: Cargo.toml
bindings/python/src/: lib.rs
bindings/typescript/: Cargo.toml
bindings/typescript/src/: lib.rs
tokenmaxxing-cli/: Cargo.toml
tokenmaxxing-cli/src/: main.rs
tokenmaxxing-core/: Cargo.toml
tokenmaxxing-core/src/: benchmark.rs  compressor.rs  context.rs  dashboard.rs  engine.rs  intelligence.rs  lib.rs  optimizer.rs  pipeline.rs  repository.rs  rewrite.rs  simulator.rs
