[workspace]
members = [
    "tokenmaxxing-core",
    "tokenmaxxing-cli",
]
resolver = "2"

[workspace.package]
version = "0.5.0-beta"
edition = "2021"
authors = ["TokenMaxxing Contributors"]
license = "MIT"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
rayon = "1.8"
regex = "1.10"
